Fixed some style of the together section aligning

--- a/scss/_images.scss
+++ b/scss/_images.scss
@@ -8,3 +8,7 @@
     margin-inline-end: 10%;
     margin-block-start: calc(#{$margin-block-start} * 4);
 }
+
+.section__together__image {
+    width: 50%;
+}
